# starscope

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  debug.py  platformio.ini  run.py
include/: board.hpp  config.h  display.hpp  setup.h
include/starscope/: config.hpp  hardware_abstraction.hpp  user_interface_display.hpp
include/starscope/drivers/: clock.hpp  mpu6050.hpp  sharp_mem_display.hpp  utils.hpp
include/starscope/system/: common.hpp  state.hpp
include/starscope/user_interface/: display.hpp  heartbeat.hpp
lib/OneBitDisplay/: OneBitDisplay.cpp  OneBitDisplay.h
lib/PCD8544_FlexibleLibrary/: Doxyfile  README.md  library.json  pcd8544.c  pcd8544.h  pcd8544_conf.h  pcd8544_font.h  pcd8544_port.h
lib/PCD8544_FlexibleLibrary/examples/: advanced_feature_example_code.c
src/: CMakeLists.txt  board.cpp  display.cpp  main.cpp  pcd8544_port.c  starscope.py  user_interface_base.py  user_interface_button.py  user_interface_control.py  user_interface_display.py  user_interface_encoder.py  user_interface_heartbeat.py
src/drivers/: font.py  sharp_mem_display.py  utils.py
src/starscope/: CMakeLists.txt  sensors.py  starscope.py  starscope_pico.cpp  user_interface_display.cpp  user_interface_display.py
src/starscope/drivers/: CMakeLists.txt  clock.cpp  mpu6050.cpp  mpu6050.py  sharp_mem_display.cpp  utils.cpp
src/starscope/system/: CMakeLists.txt  state.cpp
src/starscope/user_interface/: CMakeLists.txt  display.cpp  heartbeat.cpp
src/starscope_py/: tools_stateful_system.py  user_interface_control.py  user_interface_heartbeat.py
